--- a/angular.json
+++ b/angular.json
@@ -97,6 +97,11 @@
               "src/styles.css"
             ],
             "scripts": []
+            }    },
+              
+            "deploy": {    "builder": "angular-cli-ghpages:deploy",  
+                "options": {    "baseHref": "https://github.com/AniCoding/Circleslevel2",    
+                  "name": "Cirlceslevel2",    "email": " ani.webdevelopment@gmail.com" 
           }
         }
       }
